# ANNIE_RATPAC2

./: CMakeLists.txt  Makefile  README.md
config/: annie.sh.in
macros/: ANNIE_geometry_test.mac  ANNIE_phase2.mac  ANNIE_phase2_AmBeTest.mac  ANNIE_phase2_electron.mac  ANNIE_phase2_genie_neutrons_from_file.mac  ANNIE_phase2_michel.mac  ANNIE_phase2_michels_from_file.mac  ANNIE_phase2_muons_from_file.mac  ANNIE_phase2_neutron.mac  ANNIE_phase2_pbomb.mac  ANNIE_phase2_protons_from_file.mac  ANNIE_phase2_throughgoing_muons.mac  ANNIE_vis.mac  ANNIE_vis_HepRepFile.mac  ANNIE_vis_VRML2FILE.mac  ANNIE_vis_raytracer.mac  SANDI_phase2_externalGenNeutron.mac  SANDI_phase2_neutron.mac
ratdb/ANNIE/: ANNIE_WbLS_Volume.geo  ANNIE_WbLS_Volume_Johann.geo  ANNIE_run2_config12.geo  ANNIE_run2_config13_scan.geo  ANNIE_run2_config13_scan_sandi.geo  IO_ANNIE.ratdb  MATERIALS_ANNIE.ratdb  MATERIALS_SANDI_wbls_Nov22.ratdb  OPTICS_ANNIE.ratdb  (+11 more)
src/: Annie.cc  CMakeLists.txt  GeoANNIEFactory.cc  GeoAnnieWbLSVolumeFactory.cc  OutANNIEClusterProc.cc  annie.cpp
src/include/: Annie.hh  GeoANNIEFactory.hh  GeoAnnieWbLSVolumeFactory.hh  OutANNIEClusterProc.hh
utilities/: get_Ncap_PE_map.C  make_michel_macfile.sh  make_neutron_scattered_protons_macfile.sh  make_new_muon_file.sh  make_proton_macfile.sh  make_throughgoing_muon_macfile.sh  michel_genie_tracks.txt  michel_genie_tracks_2.txt  michel_uniform.txt  simple_event_display.C  throughgoing_genie_muons_forRAT.txt  throughgoing_genie_muons_forRAT_smaller2GeV.txt  throughgoing_muon_selection.I.txt  throughgoing_muon_selection.txt
